# LLMApiGateway

./: .clineignore  .clinerules  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  config.py  config_loader.py  docker-compose.yml  llm_request.py  llmgateway.py  log_config.py  main.py  models_fallback_rules.json  models_fallback_rules.json.example  opencode.json  openrouter_provider_mapping.json  provider_mapping.json  providers.json  pyproject.toml  requirements.txt  settings.py
.agents/rules/: default-rules.instructions.md  documentation.instructions.md
.clinerules/: default-rules.md  documentation.md
.trae/: .ignore
db/: __init__.py  llmgateway_rotation.db  model_rotation.py
docker/: README.md  docker-deployment.md  entrypoint.sh  healthcheck.py
infra/: llm_request.py
llm_gateway_core/: __init__.py
llm_gateway_core/api/: __init__.py
llm_gateway_core/api/v1/: __init__.py  chat.py  models.py  (+2 more)
llm_gateway_core/config/: __init__.py  loader.py  settings.py
llm_gateway_core/db/: __init__.py  model_rotation_db.py  tokens_usage_db.py
llm_gateway_core/middleware/: __init__.py  auth.py  chat_logging.py  request_logging.py
llm_gateway_core/services/: __init__.py  request_handler.py
llm_gateway_core/utils/: __init__.py  logging_setup.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
middleware/: auth.py  chat_logging.py  logging.py
static/: editor.css  editor.js  rules-editor.html  usage-stats.css  usage-stats.html  usage-stats.js
