[project]
name = "llmapigateway"
version = "0.1.0"
description = "LLM Gateway is a gateway to LLM Providers with advanced support fallback in case of failures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi", "httpx", "python-dotenv", "pydantic", "uvicorn", "python-json-logger", "pydantic_settings", "json5"]
